--- a/apprenticeship.css
+++ b/apprenticeship.css
@@ -1,87 +1,49 @@
-* {box-sizing: border-box;}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-background-color:#f2f2f2;
-  }
-
-.topnav {
-  overflow: hidden;
-  background-color: #fff;
-  border-bottom:3px solid #9999ff;
-  height:75px;
-  width:100%;
-  position:fixed;
-top:0px;
-margin-bottom:20px;
+.image{
+height:40px;
+max-width:100%;
+border-top:1px solid #fff;
 }
-
-#topnav{
-text-decoration:none;
-color:#333;
-font-weight:500;
-font-family:Roboto,sans-serif;
-font-size:15px;
+body{
+margin:0px;
+background-color:#dcdcdc;
 }
-
 #apprenticeship_logo{
 background-color:#8080ff;
 color:white;
 font-size:15.1px;
-font-weight:500;
+font-weight:400;
 margin-right:20px;
-
+border-top:1px solid #fff;
+border-bottom:1px solid #fff;
+font-size:14.7px;
 }	
-
-.topnav a {
-  float: left;
-  display:1 block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.navbar{
+border-bottom:5px solid red;
+margin-bottom:40px;
 }
-
-.topnav .search-container {
-  float:left;
-  padding-top:15px;
-  margin-right:20px;
+#divide{
+color:red;
+margin-left:15px;
 }
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border:1px solid #333;
-  background-color:;
+.glyphicon{
+color:red;
 }
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #fff;
-  font-size: 17px;
-  border:1px solid #333;
-  cursor: pointer;
+.navbar-toggle{
+float:left;
 }
-.maindiv{	
-border:1px solid #8080ff;
-width:75%;margin-right:auto;
+.container{
 margin-left:auto;
+margin-right:auto;
+margin-top:80px; 
+padding:15px;
 background-color:#fff;
-margin-top:140px;
-padding-top:30px;
-padding-left:30px;
+border:1px solid #8080ff;
 }
 h3{
 color:#9999ff; 
 font-family:inherit;
 font-family:Roboto,sans-serif;
-font-size:16px;
+
 display:inline-block;
 margin-top:0px;	
 }
@@ -93,219 +55,33 @@ font-size:14px;
 padding-bottom:10px;
 margin-top:5px;	
 }
-
-
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 12px;
-  }
-  
+.btn{
+background-color:#9999ff;
 }
-.image{
-display:block;
-max-width:100%;
-height:40px;
-}	
-
-.institute{
-text-decoration:none;
-color:#333;
-font-size:14px;
-font-family:Roboto,sans-serif;
-font-weight:500;
-margin-top:20px;
-border-right:1px solid #9999ff;
-height:3px;
-}
-.ins, a:hover{
-color:#8080ff;
-}
-.employer{
-text-decoration:none;
-color:#333;
-font-size:14px;
-font-family:Roboto,sans-serif;
-font-weight:500;
-margin-top:20px;
-}
-
-.candidate{
-text-decoration:none;
-color:#333;
-font-size:14px;
-font-family:Roboto,sans-serif;
-font-weight:500;
-margin-top:20px;
-border-right:1px solid #9999ff;
-height:3px;
-}
-
-.login{
-text-decoration:none;
-color:#333;
-font-size:14px;
-font-family:Roboto,sans-serif;
-font-weight:500;
-margin-top:20px;
-}
-.hb:hover{
+.star{
 color:red;
 }
-
-<!---login form---->
-.star2{
-color:red;
-}
-
-.star3{
-color:red;
-}
-
-.star4{
-color:red;
-}
-
-.star5{
-color:red;
-}
-
-.star6{
-color:red;
-}
-
-.star7{
-color:red;
-}
-.star8{
-color:red;
-}
-
-.star9{
-color:red;
-}
-
-.star10{
-color:red;
-}
-
-.city{
-padding-right:125px;
-}
-#city{
-padding-right:82px;
-}
-.dob{
-padding-right:60px;
-}
-#dob{
-padding-right:33px;
-}
-
-.mobile{
-padding-right:105px;
-}
-.email{
-padding-right:112px;
-}
-#email{
-padding-right:4px;
-}
-.fname{
-padding-right:74px;
-}
-#fname{
-padding-right:5px;
-}
-.lname{
-margin-left:20px;
-}
-.password{
-margin-left:21px;
-padding-right:7px;
-}
-#pswd{
-padding-right:;
-}
-
-.gender{
-margin-left:20px;
-padding-right:25px;
-}
-
-#gender{
-padding-right:55px;
-}
-.pincode{
-margin-left:20px;
-padding-right:20px;
-}
-
-.button{
-padding:5px 55px 5px 55px;
-margin-left:360px;
-margin-bottom:10px;
-color:#fff;
-background-color:#8080ff;
-font-weight:600;
-cursor:pointer;
-}
-
-
-<!--bottom nav--->
-body {margin:0;}
-
-.navbar {
-  overflow: hidden;
-  background-color: #8080ff;
-  position: fixed;
-  bottom:0;
-  width: 100%;
-  height:80px;
-text-align:center;
-
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  text-decoration: none;
-  font-size: 12px;
-float:center;
-padding-top:5px;
-font-weight:600;
-
-}
-
-.navbar a:hover {
-  color:#333;
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+	height:100px;
+   background-color:black;
+   color:#dcdcdc;
+   text-align: center;
+	padding:10px;
 }
 .about{
-padding-left:450px;
-padding-right:30px;
-
+color:#dcdcdc;
+font-weight:600;
 }
 .terms,
 .case,
-.netap{
-padding-right:30px;
-}
-.share{
-text-align:center;
-padding:10px;
-padding-left:590px;
-padding-top:2px;
-font-size:14px;
-padding-right:45px;
+.netap,
+.faq{
+color:#dcdcdc;
+font-weight:600;
 }
 .copy{
 margin-left:0px;
